# Notion

./: .claudeignore  .editorconfig  .gitattributes  .gitignore  .mcp.json  AUTONOMOUS-PLATFORM-IMPLEMENTATION-SUMMARY.md  AUTONOMOUS_WORKFLOW_EXECUTION_REPORT.md  BLOG-PUBLISHING-PIPELINE-IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CORE_DOCS_UPDATE_SUMMARY.md  CUsersMarkusAhlingNotionbrookside_repos.json  CUsersMarkusAhlingNotiontemp_token.txt  DSP_INTERVIEW_DATA_NEEDS.md  Deploy-Complete-Solution.ps1  Deploy-Webhook.ps1  EXECUTE-THESE-COMMANDS.ps1  GIT-STRUCTURE.md  HOOKS-INSTALLATION-COMPLETE.md  LINK_VALIDATION_REPORT.md  MASTER_NOTION_POPULATION_GUIDE.md  MISSING_DOCS_MANIFEST.md  NOTION-DOCUMENTATION-COMPLETE.md  NOTION_AGENTS_COMMANDS_BATCH_SPECS.md  NOTION_KNOWLEDGE_VAULT_BATCH_SPECS.md  NOTION_OKRS_STRATEGIC_INITIATIVES.md  ORCHESTRATION_EXECUTION_REPORT.md  PERFORMANCE-GUIDE.md  PHASE-3-TEST-REPORT.md  PROJECT-ASCENSION-COMPATIBILITY-REPORT.md  Project-Ascension-analysis.json  QUICKSTART-LINUX.md  QUICKSTART.md  README-START-HERE.md  README-UPDATE-SUMMARY.md  README.md  REPOSITORY-HOOKS-SUMMARY.md  REPOSITORY_PORTFOLIO_ANALYSIS.md  SESSION_SUMMARY_DOCS_MANAGEMENT.md  (+8 more)
.archive/: CLEANUP_MANIFEST_2025-10-28.md  MIGRATION_GUIDE.md  README.md
.archive/assessments/: documentation-audit.md  documentation-consolidation-plan.md  repository-analysis.md
.archive/docs-legacy/: AZURE_AI_FOUNDRY_QUICK_START.md  GITHUB_MCP_INTEGRATION.md  STRUCTURE_PROPOSAL.md
.archive/implementations/: agent-logging-fix-quickstart.md  mcp-standardization.md  webhook-deployment-checklist.md
.archive/sessions/: brainstorm-results.md  repo-analyzer-update.md  workspace-configuration.md
.claude/: NOTION_DATABASE_SETUP.md  SLASH_COMMANDS_GUIDE.md  SLASH_COMMANDS_GUIDE_UPDATES_SUMMARY.md  settings.local.json
.claude/Transfered/: AGENT_ANALYSIS_REPORT.md  AGENT_MANAGEMENT_QUICK_START.md  AGENT_MANAGEMENT_SUMMARY.md  ARCHITECTURE.md  CLAUDE.md  CLAUDE_UPDATE_SECTIONS.md  CLEANUP_REPORT.md  COMMAND_INTEGRATION_ANALYSIS.md  INVENTORY.md  README.md  SCREENSHOT-AUTOMATION-SUMMARY.md
.claude/agents/: activity-logger.md  architect-supreme.md  archive-manager.md  asset-migration-handler.md  blog-tone-guardian.md  build-architect-v2.md  build-architect.md  code-generator.md  compliance-automation.md  (+58 more)
.github/: pull_request_template.md
.trunk/: trunk.yaml
LogFiles/: __lastCheckTime.txt
autonomous-platform/: ACTIVITY_FUNCTIONS_SUMMARY.md  CREATE_RESEARCH_ENTRY.md  GITHUB_REPOSITORY_SETUP.md  IMPLEMENTATION_SUMMARY.md  KNOWLEDGE_VAULT_ENTRY_PHASE1.md  KNOWLEDGE_VAULT_ENTRY_PHASE2.md  NOTION_BUILD_ENTRY_SPECIFICATION.md  NOTION_ENTRY_CREATION_SUMMARY.md  PHASE2-COMPLETE.md  QUICK_START.md  README.md  RESEARCH_DOCUMENTATION_COMPLETE.md  TECHNICAL_SPECIFICATION.md
brookside-repo-analyzer/: .env.example  .gitignore  .pre-commit-config.yaml  API.md  ARCHITECTURE.md  ARCHITECTURE_DELIVERABLES_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE_2025-10-22.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS_UPDATED_2025-10-22_1500UTC.md  DEPLOYMENT_STATUS_UPDATE_2025-10-22.md  IMPLEMENTATION_SUMMARY.md  NOTION-SYNC-SETUP.md  NOTION_ENTRY_SPECS.md  PATTERN-ANALYSIS-EXECUTIVE-SUMMARY.md  PATTERN-MINING-KNOWLEDGE-VAULT-PREP.md  PRODUCTION_READINESS_STATUS.md  README-SCANNING.md  README.md  TESTING_SUMMARY.md  check_github_user.py  mine_patterns.py  pyproject.toml  run-all-orgs-scan.ps1  run-scan.ps1  test_credentials.py  test_token.py
brookside-repo-analyzer/.github/: PULL_REQUEST_TEMPLATE.md
brookside-repo-analyzer/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
brookside-repo-analyzer/deployment/azure_function/: README.md  function_app.py  host.json  requirements.txt
brookside-repo-analyzer/deployment/azure_function/src/: __init__.py  auth.py  config.py  exceptions.py  github_mcp_client.py  models.py  notion_client.py
brookside-repo-analyzer/deployment/azure_function/src/analyzers/: __init__.py  claude_detector.py  cost_calculator.py  repo_analyzer.py
brookside-repo-analyzer/deployment/azure_function/src/data/cache/: org_scan_results.json
brookside-repo-analyzer/deployment/azure_function/src/data/reports/: pattern_analysis_20251021_073407.json
brookside-repo-analyzer/deployment/azure_function/src/models/: __init__.py  financial.py  notion.py  patterns.py  reporting.py
brookside-repo-analyzer/deployment/bicep/: main.bicep
brookside-repo-analyzer/deployment/github_actions/: deploy-function.yml  repository-analysis.yml  test.yml
brookside-repo-analyzer/docs/: ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  COST_ANALYSIS.md  DEPLOYMENT_GUIDE.md
brookside-repo-analyzer/src/: __init__.py  cli.py  config.py  github_mcp_client.py  notion_client.py
brookside-repo-analyzer/src/analyzers/: cost_database.py  pattern_miner.py
brookside-repo-analyzer/src/data/: cost_database.json
brookside-repo-analyzer/src/models/: __init__.py  repository.py  scoring.py
brookside-repo-analyzer/tests/: conftest.py
brookside-repo-analyzer/tests/e2e/: test_full_workflow.py
brookside-repo-analyzer/tests/integration/: test_notion_sync.py
brookside-repo-analyzer/tests/unit/: test_auth.py  test_claude_detector.py  test_config.py  test_cost_calculator.py  test_models.py  test_pattern_miner.py  test_repo_analyzer.py
deployments/: active
diagrams/: ai-adoption-accelerator-architecture.md
docs/: AZURE_AI_FOUNDRY_MCP_SETUP.md  INDEX.md
infrastructure/: DEPLOYMENT-MANUAL.md  Deploy-Webhook.ps1  apim-webhook-policy.xml  deploy.sh  notion-webhook-function.bicep  notion-webhook-function.parameters.json
notion-entries/: NOTION-EXAMPLE-BUILD-PHASE-3.md  NOTION-KNOWLEDGE-VAULT-REPO-HOOKS.md  README-NOTION-DOCUMENTATION.md
scripts/: Compress-Logs.ps1  Get-KeyVaultSecret.ps1  Initialize-MCPConfig.ps1  Optimize-Repository.ps1  Quick-Diagnostic.ps1  README.md  Scan-GitHubMermaidDiagrams.ps1  Scan-NotionMermaidDiagrams.ps1  Set-MCPEnvironment.ps1  Test-AzureMCP.ps1  Test-DependencyLinkingSetup.ps1  Test-FinancialAPIs.ps1  Test-MCPServers.ps1  Update-NotionRelations.ps1  setup-environment.sh
(+1184 files in other folders)
